# SpeccyNextTools

./: LICENSE  README.md
.github/workflows/: main.yml
cpp/: README.md
cpp/bas2txt/: CMakeLists.txt  bas2txt.cpp  bas2txt.h
cpp/txt2bas/: CMakeLists.txt  txt2bas.cpp  txt2bas.h
dotnet/bas2txt/: bas2txt.sln
dotnet/bas2txt/bas2txt/: Program.cs
dotnet/txt2bas/: txt2bas.sln
dotnet/txt2bas/txt2bas/: Program.cs
uwiki/: README.md  uwikimain.html
uwiki/Offline Version/: BuildPortal.bat  GenerateOffline.ps1  ZXBasic_Offline_Manual.html  index.html
